[gd_scene load_steps=4 format=2]

[ext_resource path="res://LevelChanger.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0668

[node name="LevelChanger" type="Node2D"]
script = ExtResource( 1 )

[node name="LevelArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="LevelArea"]
position = Vector2( -0.220077, 0.220062 )
scale = Vector2( 0.360441, 0.360441 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="LevelArea"]
modulate = Color( 0.0156863, 0.0784314, 0.321569, 1 )
position = Vector2( -0.220055, -0.220055 )
scale = Vector2( 0.374195, 0.374195 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="LevelArea" to="." method="_on_LevelArea_area_entered"]
